--- a/Resources/Private/Partials/Fields/Language.html
+++ b/Resources/Private/Partials/Fields/Language.html
@@ -1,4 +1,4 @@
-{namespace femanager=In2code\Femanagerextended\ViewHelpers}
+{namespace femanager=Aleksundshantu\Femanagerextended\ViewHelpers}
 <f:render section="default" arguments="{_all}" />
 <f:section name="default">
     <div class="femanager_fieldset femanager_language form-group">
