--- a/Resources/Private/Partials/Fields/Othertitle.html
+++ b/Resources/Private/Partials/Fields/Othertitle.html
@@ -1,4 +1,4 @@
-{namespace femanager=In2code\Femanagerextended\ViewHelpers}
+{namespace femanager=Aleksundshantu\Femanagerextended\ViewHelpers}
 <div class="femanager_fieldset femanager_othertitle form-group">
     <label for="femanager_field_othertitle" class="col-sm-2 control-label">
         <f:translate key="tx_femanager_domain_model_user.othertitle" />
