--- a/Resources/Private/Partials/Fields/Profession.html
+++ b/Resources/Private/Partials/Fields/Profession.html
@@ -1,4 +1,4 @@
-{namespace femanager=In2code\Femanagerextended\ViewHelpers}
+{namespace femanager=Aleksundshantu\Femanagerextended\ViewHelpers}
 <div class="femanager_fieldset femanager_profession form-group">
     <label for="femanager_field_profession" class="col-sm-2 control-label">
         <f:translate key="tx_femanager_domain_model_user.profession" />
