--- a/Resources/Private/Partials/Fields/Workarea.html
+++ b/Resources/Private/Partials/Fields/Workarea.html
@@ -1,4 +1,4 @@
-{namespace femanager=In2code\Femanagerextended\ViewHelpers}
+{namespace femanager=Aleksundshantu\Femanagerextended\ViewHelpers}
 
 <f:render section="default" arguments="{_all}" />
 
